# diffenator3

./: .gitignore  Cargo.toml  README.md  pyproject.toml  renovate.json
.github/workflows/: build.yml  deploy.yml  release.yml
diff3proof/: Cargo.toml  pyproject.toml
diff3proof/src/: lib.rs  main.rs
diffenator3-cli/: Cargo.toml  pyproject.toml
diffenator3-cli/src/: args.rs  languages.rs  lib.rs  main.rs
diffenator3-cli/src/reporters/: html.rs  mod.rs  text.rs
diffenator3-cli/templates/: script.js
diffenator3-lib/: Cargo.toml
diffenator3-lib/src/: dfont.rs  html.rs  lib.rs  monkeypatching.rs  structs.rs
diffenator3-lib/src/render/: cachedoutlines.rs  colorpainter.rs  colorrenderer.rs  encodedglyphs.rs  mod.rs  renderer.rs  rustyruzz.rs  utils.rs  wordlists.rs
diffenator3-lib/src/ttj/: context.rs  layout.rs
diffenator3-lib/src/ttj/layout/: gpos.rs  variable_scalars.rs
diffenator3-lib/wordlists/: Adlam.txt.br  Avestan.txt.br  Bengali.txt.br  Bopomofo.txt.br  Canadian_Aboriginal.txt.br  Chakma.txt.br  Cherokee.txt.br  Devanagari.txt.br  Grantha.txt.br  Gujarati.txt.br  Japanese.txt.br  Kannada.txt.br  Khmer.txt.br  Lao.txt.br  Latin.txt.br  Malayalam.txt.br  Mongolian.txt.br  Ol_Chiki.txt.br  Oriya.txt.br  Syriac.txt.br  Thai.txt.br  Tibetan.txt.br
diffenator3-web/: Cargo.toml  build.rs
diffenator3-web/src/: lib.rs
diffenator3-web/www/: bootstrap.js  index.html  index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js  webworker.js
diffenator3-web/www/ts/: api.d.ts  d3web-index.ts  d3web-static.ts  shared.ts  types.ts  webworker.ts
docs/: 0.bootstrap.js  0.bootstrap.worker.js  1.bootstrap.js  1.bootstrap.worker.js  bootstrap.js  bootstrap.worker.js  index.html  index_js.bootstrap.js  pkg_diffenator3_web_js.bootstrap.js  style.css  webworker_js.bootstrap.js
docs/wordlists/: Grantha.txt
kerndiffer/: Cargo.toml
kerndiffer/src/: main.rs
rendertest/: Cargo.toml
rendertest/src/: main.rs
scripts/: check_versions.py
src/: bin.rs  dfont.rs  html.rs  lib.rs  main.rs  monkeypatching.rs  setting.rs  utils.rs
src/render/: cachedoutlines.rs  encodedglyphs.rs  mod.rs  renderer.rs  rustyruzz.rs  utils.rs  wordlists.rs  zenorender.rs
src/reporters/: html.rs  json.rs  mod.rs  text.rs
src/templates/: Glyph.partial.html  GlyphDiff.partial.html  WordDiff.partial.html  _base.html  diffenator.html  script.js  shared.js  style.css
src/ttj/: gdef.rs  jsondiff.rs  layout.rs  mod.rs  namemap.rs  serializefont.rs
src/ttj/layout/: gpos.rs  gsub.rs  variable_scalars.rs
templates/: CSSFontFace.partial.html  CSSFontStyle.partial.html  WordDiff.partial.html  _base.html  diff3proof.html  diffenator.html  script.js  script.js.map  shared.js  style.css
test-data/: Adlam.txt.br  Arabic.txt  Arabic.txt.br  Armenian.txt.br  Avestan.txt.br  Bengali.txt.br  Bopomofo.txt.br  Canadian_Aboriginal.txt.br  Chakma.txt.br  Cherokee.txt.br  Common.txt.br  Cyrillic.txt.br  Devanagari.txt.br  Ethiopic.txt.br  Georgian.txt.br  Grantha.txt.br  Greek.txt.br  Gujarati.txt.br  Gurmukhi.txt.br  Hebrew.txt.br  Hiragana.txt.br  Japanese.txt.br  Kannada.txt.br  Katakana.txt.br  Khmer.txt.br  Lao.txt.br  Latin.txt.br  Lisu.txt.br  Malayalam.txt.br  Mongolian.txt.br  Myanmar.txt.br  Ol_Chiki.txt.br  Oriya.txt.br  Osage.txt.br  Sinhala.txt.br  Syriac.txt.br  Tamil.txt.br  Telugu.txt.br  Thai.txt.br  Thanaa.txt.br  (+3 more)
ttj/: Cargo.toml
ttj/src/: context.rs  gdef.rs  layout.rs  lib.rs  monkeypatching.rs  namemap.rs  serializefont.rs
ttj/src/layout/: gpos.rs  gsub.rs  variable_scalars.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js  webworker.js
www/wordlists/: Kannada.txt
