[workspace]
resolver = "2"
members = [
    "diffenator3-lib",
    "diffenator3-cli",
    "diffenator3-web",
    "diff3proof",
    "kerndiffer",
    "rendertest",
    "ttj",
]
default-members = ["diffenator3-cli", "diff3proof"]

[workspace.dependencies]
read-fonts = { version = "0.33.0", features = [
    "serde",
    "experimental_traverse",
] }
skrifa = "0.35.0"
indexmap = "1.9.3"
serde_json = { version = "1.0.96", features = ["preserve_order"] }
serde = { version = "*", features = ["derive"] }
harfrust = { version = "0.1.1" }
log = "0.4.28"

[profile.dev]
# Rustybuzz debug-asserts that the provided script is the same as
# the text's script, *even if* you're using guess_segment_properties.
debug-assertions = false

[profile.release]
opt-level = "z"
lto = true
