[package]
name = "diff3proof"
version = "0.1.0"
edition = "2021"

[dependencies]
diffenator3-lib = { path = "../diffenator3-lib", features = ["html"] }
google-fonts-languages = { git = "https://github.com/googlefonts/lang", branch = "rust" }
tera = "1"
clap = { version = "4.5.9", features = ["derive"] }
env_logger = "0.11"
serde_json = { workspace = true }
fancy-regex = "0.13"
