[package]
name = "diffenator3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "diffenator3"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
typescript = ["dep:typescript-type-def"]

[dependencies]
diffenator3-lib = { path = "../diffenator3-lib", features = ["html"] }
ttj = { path = "../ttj" }
indexmap = { workspace = true }
skrifa = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rayon = "*"
colored = "2.1.0"

clap = { version = "4.5.9", features = ["derive"] }
itertools = "0.13.0"
env_logger = "0.11"
log = { workspace = true }
shaperglot = { workspace = true }
tabled = "0.20.0"

# Code for emitting TypeScript types
typescript-type-def = { version = "0.5.13", optional = true, features=["json_value"] }

