[package]
name = "diffenator3"
version = "1.1.0"
edition = "2021"
authors = ["The Diffenator3 Authors"]
homepage = "https://github.com/googlefonts/diffenator3"
repository = "https://github.com/googlefonts/diffenator3"
description = "A font comparison tool that will not stop until your fonts are exhaustively compared"
license = "Apache-2.0"

[[bin]]
name = "diffenator3"
path = "src/main.rs"

[[bin]]
name = "diff3proof"
path = "src/bin/diff3proof.rs"
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
typescript = ["dep:typescript-type-def", "diffenator3-lib/typescript"]

[dependencies]
diffenator3-lib = { path = "../diffenator3-lib", version = "1", features = [
    "html",
] }
diff3proof = { version = "1", path = "../diff3proof" }
ttj = { version = "1", path = "../ttj" }
indexmap = { workspace = true }
skrifa = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rayon = "1.11.0"
colored = "2.1.0"

clap = { version = "4.5.9", features = ["derive"] }
itertools = "0.13.0"
env_logger = "0.11"

log = { workspace = true }
shaperglot = { workspace = true }
tabled = "0.20.0"

# Code for emitting TypeScript types
typescript-type-def = { version = "0.5.13", optional = true, features = [
    "json_value",
] }
