[package]
name = "diffenator3-web"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2" }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1.6" }
js-sys = { version = "0.3.68" }
diffenator3-lib = { path = "../diffenator3-lib" }
ttj = { path = "../ttj" }
serde_json = { workspace = true }
skrifa = { workspace = true }
shaperglot = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
diffenator3-lib = { path = "../diffenator3-lib", features = ["typescript"] }
diffenator3 = { path = "../diffenator3-cli", features = ["typescript"] }
typescript-type-def = "0.5.13"
